--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.kafka.bootstrap-server=moped.srvs.cloudkafka.com:9094
+spring.kafka.properties.security.protocol=SASL_SSL
+spring.kafka.properties.sasl.mechanism=SCRAM-SHA-512
+spring.kafka.properties.enable.idempotence=false
+spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="${KARAFKA_USER}" password="${KARAFKA_PASS}";
+KARAFKA_USER=***
+KARAFKA_PASS=***
+kafka.topic=vjwxeklb-email
+kafka.group-id=vjwxeklb-admin
+kafka.client-id=ADMIN
