--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ KARAFKA_PASS=***
 kafka.topic=vjwxeklb-email
 kafka.group-id=vjwxeklb-admin
 kafka.client-id=ADMIN
+
+#email
+spring.mail.username=***
