correcao-email-server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ kafka.client-id=ADMIN
 #email
 spring.mail.username=***
 spring.mail.password=***
+
+spring.mail.host=smtp.dbccompany.com.br
+spring.mail.port=587
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
