--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ kafka.client-id=ADMIN
 #email
 spring.mail.username=***
 spring.mail.password=***
+server.port=6669
 
 spring.mail.host=smtp.dbccompany.com.br
 spring.mail.port=587
